- slightly less conservative in numerics for SCIPmakeRowIntegral()
- removed performance bottleneck with non-bfs based node selectors and large leaf queues at the cost of a small
  memory overhead (2 ints per node in the leaf queue); this improves performance quite a bit on instances that
  take a large number of branching nodes
- slightly modified automatic constraint aging strategy

fixed bugs:
- fixed numerical buf with slightly different LP optimum after resolving due to probing/diving
- fixed bug in cmir and flowcover separator with variables which are currently not in the LP
- weakened assert in primal.c in order to avoid numerical troubles
- changed wrong assert in SCIPnodeAddBoundinfer()
- fixed bug in intshifting and oneopt heuristic with variables which are currently not in the LP
- fixed bug in integer objective seperator with restarts
- fixed bug in integer objective seperator with dynamic columns
- fixed numerical bug in propagator of varbound constraint handler
- fixed numerical bug in rowScaling of lp.c, which possibly cut off feasible solutions
- fixed bug with too long variable names
- fixed bug with strange user descriptions of plugins
- changed position of some asserts to prevent segmentation faults
- SCIPgetAvgPseudocostCount() and SCIPgetAvgPseudocostCountCurrentRun() now return the average over all integer variables instead
  of all variables, since pseudo costs are not recorded for continuous variables
- fixed wrong sorting of plugins with priorities close to INT_MIN or INT_MAX
- replaced "line" by "read" in Makefile, since "line" is non-standard
- fixed bug in variable bound constraint handler with changing bounds on multi-aggregated variables
- fixed bug in variable bounds search and insertion method
- fixed bug with LP size management in probing if column generation is used
- fixed bug with branching rules that produce only one child with no changes to the problem