@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons_and.c,v 1.78 2007/06/06 11:25:13 bzfpfend Exp $"
+#pragma ident "@(#) $Id: cons_and.c,v 1.79 2007/06/27 10:17:05 bzfberth Exp $"
 
 /**@file   cons_and.c
  * @brief  constraint handler for and constraints
@@ -1447,7 +1447,8 @@ SCIP_RETCODE preprocessConstraintPairs(
 
    /* check constraint against all prior constraints */
    cons0changed = consdata0->changed;
-   for( c = (cons0changed ? 0 : firstchange); c < chkind && !(*cutoff) && SCIPconsIsActive(cons0); ++c )
+   for( c = (cons0changed ? 0 : firstchange); c < chkind && !(*cutoff) && SCIPconsIsActive(cons0) 
+      && !SCIPisStopped(scip); ++c )
    {
       SCIP_CONS* cons1;
       SCIP_CONSDATA* consdata1;
@@ -1894,7 +1895,7 @@ SCIP_DECL_CONSPRESOL(consPresolAnd)
    cutoff = FALSE;
    delay = FALSE;
    firstchange = INT_MAX;
-   for( c = 0; c < nconss && !cutoff; ++c )
+   for( c = 0; c < nconss && !cutoff && !SCIPisStopped(scip); ++c )
    {
       cons = conss[c];
       assert(cons != NULL);
@@ -2001,7 +2002,7 @@ SCIP_DECL_CONSPRESOL(consPresolAnd)
    /* return the correct result code */
    if( cutoff )
       *result = SCIP_CUTOFF;
-   else if( delay )
+   else if( delay || SCIPisStopped(scip) )
       *result = SCIP_DELAYED;
    else if( *nfixedvars > oldnfixedvars || *naggrvars > oldnaggrvars || *nchgbds > oldnchgbds
       || *ndelconss > oldndelconss )
