@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons_or.c,v 1.61 2007/06/06 11:25:14 bzfpfend Exp $"
+#pragma ident "@(#) $Id: cons_or.c,v 1.62 2007/06/27 10:17:08 bzfberth Exp $"
 
 /**@file   cons_or.c
  * @brief  constraint handler for or constraints
@@ -1594,7 +1594,7 @@ SCIP_DECL_CONSPRESOL(consPresolOr)
 
    /* process constraints */
    cutoff = FALSE;
-   for( c = 0; c < nconss && !cutoff; ++c )
+   for( c = 0; c < nconss && !cutoff && !SCIPisStopped(scip); ++c )
    {
       cons = conss[c];
       assert(cons != NULL);
